# freertos-pi-pico

./: README.md
app/: CMakeLists.txt  FreeRTOSConfig.h  main1.c  main2.c  main3.c  main4.c  main5.c
